--- a/lab 2 - grid/thefuture/index.html
+++ b/lab 2 - grid/thefuture/index.html
@@ -8,16 +8,16 @@
     <title>the future</title>
 </head>
 <body>
-<div><p>The future feels like homework</p></div>
-<div><p>The future feels like homework</p></div>
-<div><p>The future feels like homework</p></div>
-<div><p>The future feels like homework</p></div>
-<div><p>The future feels like homework</p></div>
-<div><p>The future feels like homework</p></div>
-<div><p>The future is broken</p></div>
-<div><p>The future feels like homework</p></div>
-<div><p>The future feels like homework</p></div>
-<div><p>The cloud is new infinity</p></div>
+<div class="homework"><p>The future feels like homework</p></div>
+<div class="homework"><p>The future feels like homework</p></div>
+<div class="homework"><p>The future feels like homework</p></div>
+<div class="homework"><p>The future feels like homework</p></div>
+<div class="homework"><p>The future feels like homework</p></div>
+<div class="homework"><p>The future feels like homework</p></div>
+<div class="broken"><p>The future is broken</p></div>
+<div class="homework"><p>The future feels like homework</p></div>
+<div class="homework"><p>The future feels like homework</p></div>
+<div class="cloud"><p>The cloud is new infinity</p></div>
     
 </body>
 </html>
