first try of making the grid

--- a/lab 2 - grid/thefuture/index.html
+++ b/lab 2 - grid/thefuture/index.html
@@ -10,14 +10,14 @@
 <body>
 <div class="homework"><p>The future feels like homework</p></div>
 <div class="homework"><p>The future feels like homework</p></div>
-<div class="homework"><p>The future feels like homework</p></div>
-<div class="homework"><p>The future feels like homework</p></div>
-<div class="homework"><p>The future feels like homework</p></div>
-<div class="homework"><p>The future feels like homework</p></div>
 <div class="broken"><p>The future is broken</p></div>
 <div class="homework"><p>The future feels like homework</p></div>
 <div class="homework"><p>The future feels like homework</p></div>
 <div class="cloud"><p>The cloud is new infinity</p></div>
+<div class="homework"><p>The future feels like homework</p></div>
+<div class="homework"><p>The future feels like homework</p></div>
+<div class="homework2"><p>The future feels like homework</p></div>
+<div class="homework2"><p>The future feels like homework</p></div>
     
 </body>
 </html>
