--- a/lab 2 - grid/thefuture/index.html
+++ b/lab 2 - grid/thefuture/index.html
@@ -9,16 +9,16 @@
     <title>the future</title>
 </head>
 <body>
-<div class="homework"><p>The future feels like homework</p></div>
-<div class="homework"><p>The future feels like homework</p></div>
-<div class="broken"><p>The future is broken</p></div>
-<div class="homework"><p>The future feels like homework</p></div>
-<div class="homework"><p>The future feels like homework</p></div>
-<div class="cloud"><p>The cloud is new infinity</p></div>
-<div class="homework"><p>The future feels like homework</p></div>
-<div class="homework"><p>The future feels like homework</p></div>
-<div class="homework"><p>The future feels like homework</p></div>
-<div class="homework"><p>The future feels like homework</p></div>
+<div class="homework"><h1>The future feels like homework</h1></div>
+<div class="homework"><h1>The future feels like homework</h1></div>
+<div class="broken"><h1>The future is broken</h1></div>
+<div class="homework"><h1>The future feels like homework</h1></div>
+<div class="homework"><h1>The future feels like homework</h1></div>
+<div class="cloud"><h1>The cloud is new infinity</h1></div>
+<div class="homework"><h1>The future feels like homework</h1></div>
+<div class="homework"><h1>The future feels like homework</h1></div>
+<div class="homework"><h1>The future feels like homework</h1></div>
+<div class="homework"><h1>The future feels like homework</h1></div>
     
 </body>
 </html>
