mobile first version gridticket

--- a/lab 2 - grid/gridticket/index.html
+++ b/lab 2 - grid/gridticket/index.html
@@ -9,12 +9,21 @@
     <title>gridticket</title>
 </head>
 <body>
-<div><h3>Live programming music</h3></div>
-<div><h1>WE ARE IMD</h1></div>
-<div><h2>FEB 29</h2></div>
-<div><h2>ADMIT ONE</h2></div>
-<div><h2>TICKET €15</h2></div>
-<div><p>being frustrated with CSS Grid is included in the ticket price.</p></div>
-<div><img src="1_sHmqYIYMV_C3TUhucHrT4w.png"></div>
+
+<header>
+<div><h1>WEAREIMD</h1></div>
+<div><h3>LIVE PROGRAMMING MUSIC</h3></div>
+</header>
+
+<section>
+<div align="center"><img class="qr" src="1_sHmqYIYMV_C3TUhucHrT4w.png"></div>
+<div class= "tabel">  
+    <div class="box1 borders"><h2>FEB 29</h2></div>
+    <div class="box2 borders"><h2>ADMIT ONE</h2></div>
+    <div class="box3 borders"><h2>TICKET €15</h2></div>
+</div>
+<div class="hide"><p>being frustrated with CSS Grid is included in the ticket price.</p></div>
+</section> 
+
 </body>
 </html>
