--- a/lab 2 - grid/gridticket/index.html
+++ b/lab 2 - grid/gridticket/index.html
@@ -8,22 +8,21 @@
     <link rel="stylesheet" href="normalize.css">
     <title>gridticket</title>
 </head>
-<body>
+<body class="grid-container">
 
-<header>
-<div><h1>WEAREIMD</h1></div>
-<div><h3>LIVE PROGRAMMING MUSIC</h3></div>
-</header>
+    <div class="banner">
+        <h1>WEAREIMD</h1>
+        <h3>LIVE PROGRAMMING MUSIC</h3>
+    </div>
 
-<section>
-<div align="center"><img class="qr" src="1_sHmqYIYMV_C3TUhucHrT4w.png"></div>
-<div class= "tabel">  
-    <div class="box1 borders"><h2>FEB 29</h2></div>
-    <div class="box2 borders"><h2>ADMIT ONE</h2></div>
-    <div class="box3 borders"><h2>TICKET €15</h2></div>
-</div>
-<div class="hide"><p>being frustrated with CSS Grid is included in the ticket price.</p></div>
-</section> 
+    <div class="qr">
+        <img src="1_sHmqYIYMV_C3TUhucHrT4w.png" alt="QR-code festival">
+    </div>
 
+    <div class="month"><h2>FEB 29</h2></div>
+    <div class="admit-1"><h2>ADMIT ONE</h2></div>
+    <div class="ticket-price"><h2>TICKET €15</h2></div>
+    <div class="hide"><p>being frustrated with CSS Grid is included in the ticket price.</p></div>
+    
 </body>
 </html>
