added css to gridticket

--- a/lab 2 - grid/gridticket/index.html
+++ b/lab 2 - grid/gridticket/index.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="normalize.css">
     <title>gridticket</title>
 </head>
-<body class="grid-container">
+<body>
 
     <div class="banner">
-        <h1>WEAREIMD</h1>
+        <div class= "direction-banner">
+        <h1>WEAREIMD</h1></div>
         <h3>LIVE PROGRAMMING MUSIC</h3>
+        </div>
     </div>
 
     <div class="qr">
