Updated Remove function

--- a/lab3/src/index.html
+++ b/lab3/src/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>lab3</title>
     <link rel="stylesheet" href="app.css" />
+    <link rel="script" href="app.js"/>
   </head>
   <body>
     <div id="container">
