--- a/lab4-ad/index.html
+++ b/lab4-ad/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id = "weather"> </div>
+    <script src="app.css"></script>
     <script src="app.js"></script>
 </body>
 </html>
