added activity to bad and good weather

--- a/lab4-ad/index.html
+++ b/lab4-ad/index.html
@@ -4,12 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="app.css">
     <title>Weather ad</title>
-    <script src="app.css"></script>
-    <script src="app.js"></script>
 </head>
 <body>
-    <div id = "weather"> </div>
-   
+    <div class="container"> 
+    <h1>Are you bored? Let us help you!</h1>
+
+    <div id = "activityOutside"></div>
+
+    <div id = "activityInside"></div>
+
+    <div id = "weather"></div>
+
+    <script src="app.js"></script>
+    
 </body>
 </html>
