added design to bad weather day and good weather day

--- a/lab4-ad/index.html
+++ b/lab4-ad/index.html
@@ -9,11 +9,13 @@
 </head>
 <body>
     <div class="container"> 
-    <h1>Are you bored? Let us help you!</h1>
-
+    <h1 class= "title"></h1>
+    <div class= "picture"></div>
+    <div class= "activity">
+    <h2> Your activity for today: </h2>
     <div id = "activityOutside"></div>
-    <div id = "activityInside"></div>
-    <div id = "weather"></div>
+    <div id = "activityInside"> </div>
+    </div>
     <script src="app.js"></script>
     
 </body>
