--- a/lab4-ad/index.html
+++ b/lab4-ad/index.html
@@ -9,10 +9,11 @@
 </head>
 <body>
     <div class="container"> 
-    <h1 class= "title"></h1>
-    <div class= "picture"></div>
+    <h1> On the right path to getting rid of your boredom... </h1>
+    <h2 class= "title"></h2>
+    <div class= "picture">
     <div class= "activity">
-    <h2> Your activity for today: </h2>
+    <h3> Your activity for today: </h3>
     <div id = "activityOutside"></div>
     <div id = "activityInside"> </div>
     </div>
