added another api and edited my ad

--- a/lab4-ad/index.html
+++ b/lab4-ad/index.html
@@ -9,12 +9,19 @@
 </head>
 <body>
     <div class="container"> 
-    <h1> On the right path to getting rid of your boredom... </h1>
+    <img class="barimage" src= "cocktailbar.jpg" alt= "cocktail bar" width=170px>
+    <h1> We are back! That means: every day will be a cocktail day! </h1>
     <h2 class= "title"></h2>
     <div class= "picture">
-    <div class= "activity">
-    <h3> Your activity for today: </h3>
-    <div id = "activityOutside"></div>
+    <div class= "cocktail">
+    <h3> Which cocktail is PERFECT for you? </h3>
+    <div id = "cocktail"></div>
+    <div id= "picture"></div>
+    <h4> Ingredients: </h4>
+    <li id = "ingredient1"></li>
+    <li id = "ingredient2"></li>
+    <li id = "ingredient3"></li>
+    <li id = "ingredient4"></li>
     <div id = "activityInside"> </div>
     </div>
     <script src="app.js"></script>
