edited ad format

--- a/lab4-ad/index.html
+++ b/lab4-ad/index.html
@@ -9,8 +9,7 @@
 </head>
 <body>
     <div class="container"> 
-    <img class="barimage" src= "cocktailbar.jpg" alt= "cocktail bar" width=170px>
-    <h1> We are back! That means: every day will be a cocktail day! </h1>
+    <div class="banner"><img class="barimage" src= "cocktailbar.jpg" alt= "cocktail bar" width=170px></div>
     <h2 class= "title"></h2>
     <div class= "picture">
     <div class= "cocktail">
